tests/error/var_defined.gw
#! [contains] has already been defined in the same scope
var int i;
var int i;
